# hyprtasking

./: dev.sh  meson.build
src/: grid_dims.hpp  input.cpp  main.cpp  manager.cpp  manager.hpp  overview.cpp  render.hpp
src/layout/: grid.cpp  grid.hpp  layout_base.cpp
test/: grid_dims_test.cpp
